# fast-paint-texture

./: .gitignore  CMakeLists.txt  README.md  clean.sh  make-run.sh  rasterizer.cpp  run.sh
include/: debug.hpp  image.hpp  kernel.hpp  light.hpp  paint.hpp  parameters.h  parameters.hpp  rasterizer.hpp  shader.hpp  stroke.hpp  texture.hpp
scripts/: clean.sh  make-run.sh  make.sh  run.sh
src/: image.cpp  kernel.cpp  main.cpp  paint.cpp  shader.cpp  stroke.cpp  texture.cpp
